--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
     background-color: #7091d5;
   }
 body {
-    background-color: #c52727;
+    background-color: #ffffff;
   }
 #box{
     text-align: center;
